[gd_scene load_steps=2 format=3 uid="uid://dvkjd5ay5u8qx"]

[ext_resource type="Script" path="res://Data/EnemySpawnerScript.gd" id="1_gyvgf"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_gyvgf")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Enemies" type="Node2D" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
